[gd_scene load_steps=33 format=2]

[ext_resource path="res://zones_boxes/hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://zones_boxes/hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player.gd" type="Script" id=3]
[ext_resource path="res://sprites/player/adventurer-Sheet.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.91216
height = 17.2028

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.61238, 2.82258 )

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 47, 48, 49, 50, 51, 52 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_reset_state"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/Attack Hitbox/CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 23, 22 ]
}

[sub_resource type="Animation" id=5]
resource_name = "hit"
length = 2.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 59, 60, 61, 62, 63, 64, 65, 66, 67, 68 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_goto_recent_memory"
} ]
}

[sub_resource type="Animation" id=6]
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 18, 22 ]
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "hit"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachine" id=27]
resource_local_to_scene = true
states/attack/node = SubResource( 9 )
states/attack/position = Vector2( 372, -16.2889 )
states/fall/node = SubResource( 10 )
states/fall/position = Vector2( 372, 182 )
states/hit/node = SubResource( 11 )
states/hit/position = Vector2( 225, 76 )
states/idle/node = SubResource( 12 )
states/idle/position = Vector2( 372, 76 )
states/jump/node = SubResource( 13 )
states/jump/position = Vector2( 506, 182 )
states/run/node = SubResource( 14 )
states/run/position = Vector2( 506, 76 )
transitions = [ "idle", "jump", SubResource( 15 ), "idle", "run", SubResource( 16 ), "run", "jump", SubResource( 17 ), "jump", "fall", SubResource( 18 ), "fall", "idle", SubResource( 19 ), "run", "fall", SubResource( 20 ), "idle", "fall", SubResource( 21 ), "idle", "attack", SubResource( 22 ), "run", "attack", SubResource( 23 ), "attack", "idle", SubResource( 24 ), "run", "idle", SubResource( 25 ), "idle", "hit", SubResource( 26 ) ]
start_node = "idle"
graph_offset = Vector2( -101, -37.9369 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=28]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 65
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
vframes = 11
hframes = 7
frame = 2

[node name="body1" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.21675 )
shape = SubResource( 1 )

[node name="body2" type="CollisionShape2D" parent="."]
position = Vector2( 0, 14.5466 )
shape = SubResource( 2 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 3 )
anims/fall = SubResource( 4 )
anims/hit = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/jump = SubResource( 7 )
anims/run = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 27 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 28 )

[node name="Position2D" type="Position2D" parent="."]
visible = false

[node name="hurtbox" parent="Position2D" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 0

[node name="CollisionPolygon2D" parent="Position2D/hurtbox" index="0"]
polygon = PoolVector2Array( 0, 16, -8, 0, 0, -8, 8, 0, 0, 16 )

[node name="MemoryHurtbox" parent="Position2D" instance=ExtResource( 1 )]
collision_layer = 32
collision_mask = 0

[node name="CollisionPolygon2D" parent="Position2D/MemoryHurtbox" index="0"]
polygon = PoolVector2Array( -8, 0, 0, 16, 8, 0, 0, -8 )

[node name="WinSpotHurtBox" parent="Position2D" instance=ExtResource( 1 )]
collision_layer = 64
collision_mask = 128

[node name="CollisionPolygon2D" parent="Position2D/WinSpotHurtBox" index="0"]
polygon = PoolVector2Array( -8, 0, 0, 16, 8, 0, 0, -8 )

[node name="Attack Hitbox" parent="Position2D" instance=ExtResource( 2 )]
collision_layer = 0
collision_mask = 16

[node name="CollisionPolygon2D" parent="Position2D/Attack Hitbox" index="0"]
polygon = PoolVector2Array( 24, -8, 24, 16, -16, 16, 0, 8, 0, -16, 16, -16 )
disabled = true

[node name="PositionTimer" type="Timer" parent="."]
wait_time = 0.01
autostart = true
[connection signal="area_entered" from="Position2D/hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="Position2D/WinSpotHurtBox" to="." method="_on_WinSpotHurtBox_area_entered"]
[connection signal="timeout" from="PositionTimer" to="." method="_on_PositionTimer_timeout"]

[editable path="Position2D/hurtbox"]

[editable path="Position2D/MemoryHurtbox"]

[editable path="Position2D/WinSpotHurtBox"]

[editable path="Position2D/Attack Hitbox"]
